- Limit the size of images to max 100% (fixes huge images in research briefings, and anywhere else they crop up) - Add missing space before 'asked to reply author' for written questions

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,8 @@ p:last-child {
 nav#header-nav {
     display: none;
 }
+
+/* limit size of images in rendered HTML content */
+img {
+    max-width: 100%;
+}
